feat(atk): add USB‑CDC console commands for ATK‑MS901M
- add USB console task with read/write/raw passthru commands
- serialize ATK UART access to avoid sensor stream contention
- expose ATK reg/raw access helpers

--- a/components/core/crazyflie/CMakeLists.txt
+++ b/components/core/crazyflie/CMakeLists.txt
@@ -11,6 +11,7 @@ idf_component_register(SRCS "./hal/src/buzzer.c"
                 "./hal/src/espnow_ctrl.c"
                 "./modules/src/app_handler.c" 
                 "./modules/src/app_channel.c" 
+                "./modules/src/atk_console.c"
                 "./modules/src/attitude_pid_controller.c"
                 "./modules/src/comm.c"
                 "./modules/src/commander.c"
